--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "wiredep": "^3.0.1",
     "require-dir": "^0.1.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp-svg-sprites": "^4.0.2",
+    "gulp-svg2png": "^2.0.2",
+    "gulp-util": "^3.0.7"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
